# Ranch-House

./: .gitmodules
src/: AR_lab_STU_fixed.py  apriltag_detector.py  atag_publisher.py  atag_subscriber.py
src/april_tags/: package.xml  setup.py
src/april_tags/april_tags/: atag_subscriber.py
src/brio/: package.xml  setup.cfg  setup.py
src/brio/brio/: brio_sub_and_pub.py  brio_subscriber.py
src/brio/brio/tuning/: camera_tuner.py
src/brio/launch/: camera_launch.py  camera_tune_launch.py  debug_launch.py
src/linefollower/: package.xml  setup.cfg  setup.py
src/linefollower/linefollower/: detector.py  tracker.py
src/position_estimator/position_estimator/: position_estimator  position_estimator_sub_and_pub
tunings/7-28-25_10-25_am/: ost.txt  ost.yaml
