<?xml version="1.0"?>
<package format="3">
  <name>april_tags</name>
  <version>0.0.0</version>
  <description>AprilTag subscriber node for ROS2, subscribes to Brio image topic.</description>
  <maintainer email="safina.baiocchi@gmail.com">Safina Baiocchi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>apriltag</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>